Fix HTML structure and update project list

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
     <div class="section" id="projects">
         <h2>Projects</h2>
         <ul>
-            <li>Smart Attendance System</li>
+            <li>Plan&Prep-studywebsite</li>
             <li>NS-3 Network Simulation</li>
-            <li>Secure Chat App using Python</li>
-            <li>Mini Search Engine in C++</li>
+            <li>Blockchain based incident reporting system</li>
+            
         </ul>
     </div>
 
@@ -134,3 +134,4 @@
 
 </body>
 </html>
+
